2012-02-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/videotest.c (grub_cmd_videotest): Fix subset
	symbol.
	Reported by: NODA, Kai <nodakai>.

2012-02-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix ehci on amd64.

	* grub-core/bus/usb/usbhub.c (grub_usb_hub_add_dev): Use %p to print
	pointers.
	* grub-core/bus/usb/ehci.c (grub_ehci_pci_iter): Likewise.
	(grub_ehci_setup_qh): Likewise.
	(grub_ehci_find_qh): Likewise.
	(grub_ehci_transaction): Likewise.
	(grub_ehci_setup_transfer): Likewise.
	(grub_ehci_check_transfer): Likewise.
	(grub_ehci_portstatus): Likewise.
	(grub_ehci_detect_dev): Likewise.
	(grub_ehci_transfer_controller_data): New field td_last_phys.
	(grub_ehci_setup_transfer): Fill td_last_phys.
	(grub_ehci_check_transfer): Use td_last_phys.

2012-02-01  Seth Goldberg <seth.goldberg@oracle.com>

	* grub-core/normal/context.c (grub_env_extractor_close): Don't crash
	if no submenu is present.

2012-02-01  Aleš Nesrsta <starous@volny.cz>

	CBI support.

	* include/grub/usb.h (grub_usbms_protocol_t): New values
	GRUB_USBMS_PROTOCOL_CB and GRUB_USBMS_PROTOCOL_CBI.
	* grub-core/disk/usbms.c (GRUB_USBMS_CBI_CMD_SIZE): New define.
	(GRUB_USBMS_CBI_ADSC_REQ): Likewise.
	(grub_usbms_dev): Add subclass, protocol and intrpt.
	Remove in_maxsz and out_maxsz.
	(grub_usbms_reset): Rename to ...
	(grub_usbms_bo_reset): .. this.
	(grub_usbms_cbi_cmd): New function.
	(grub_usbms_cbi_reset): Likewise.
	(grub_usbms_reset): Likewise.
	(grub_usbms_attach): Recognize cbi. Same subclass and protocol.
	(grub_usbms_transfer): Rename to ...
	(grub_usbms_transfer_bo): ... this.
	(grub_usbms_transfer_cbi): Likewise.
	(grub_usbms_transfer): Likewise.

2012-02-01  Aleš Nesrsta <starous@volny.cz>
2012-02-01  Vladimir Serbinenko  <phcoder@gmail.com>

	EHCI support. All of the credit goes to Aleš Nesrsta. I've just added
	the support for the CS5536 modification thereos and few bugfixes.

	* grub-core/Makefile.core.def (ehci): New module.